added table for accuracies for different language pairs + paragraph with the description added F1 score added standard deviations added some references

--- a/jair.bib
+++ b/jair.bib
@@ -591,3 +591,12 @@
   booktitle = {Proceedings of 17th Multiconference on Information Society 2014 (IS-2014)},
   year={2014}
 }
+
+@inproceedings{pouliquen2008story,
+  title={Story tracking: linking similar news over time and across languages},
+  author={Pouliquen, Bruno and Steinberger, Ralf and Deguernel, Olivier},
+  booktitle={Proceedings of the workshop on Multi-source Multilingual Information Extraction and Summarization},
+  pages={49--56},
+  year={2008},
+  organization={Association for Computational Linguistics}
+}
