added submitted paper

--- a/jair.bib
+++ b/jair.bib
@@ -3,9 +3,9 @@
 
 
 @Book{kmeans,
-  Title                    = {"Clustering Algorithms (Probability \& Mathematical Statistics)"},
-  Author                   = {"J. A. Hartigan "},
-  Publisher                = {"John Wiley \& Sons Inc."},
+  Title                    = {Clustering Algorithms (Probability \& Mathematical Statistics)},
+  Author                   = {J. A. Hartigan},
+  Publisher                = {John Wiley \& Sons Inc.},
   Year                     = {1975}
 }
 
